--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "yiisoft/yii2-bootstrap": "*",
         "vova07/yii2-start": "*",
-        "vova07/yii2-rbac-module": "*"
+        "vova07/yii2-rbac-module": "*",
+        "vova07/yii2-fileapi-widget": "*"
     },
     "autoload": {
         "psr-4": {
